# slate-engine

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CAPABILITIES.md  Cargo.toml  FEATURES.md  MANIFEST.md  README.md  ROADMAP.md  webapis
.claude/: settings.local.json
benches/: full_pipeline.rs
crates/slate-ais/: Cargo.toml
crates/slate-ais/src/: geom.rs  layout.rs  lib.rs  rendering.rs  state.rs
crates/slate-arena/: Cargo.toml
crates/slate-arena/src/: lib.rs
crates/slate-benchmarks/: Cargo.toml
crates/slate-benchmarks/benches/: full_pipeline.rs
crates/slate-benchmarks/src/: lib.rs
crates/slate-css/: Cargo.toml
crates/slate-css/benches/: selector_matching.rs
crates/slate-css/src/: animation.rs  cascade.rs  cssparser_integration.rs  gradient.rs  lib.rs  parser.rs  selector.rs  values.rs
crates/slate-dispatcher/: Cargo.toml
crates/slate-dispatcher/src/: decompose.rs  ir.rs  lib.rs  normalize.rs  style.rs
crates/slate-dom/: Cargo.toml
crates/slate-dom/src/: lib.rs  mutation.rs  node.rs  query.rs
crates/slate-events/: Cargo.toml
crates/slate-events/src/: dispatcher.rs  lib.rs  listener.rs  types.rs
crates/slate-html/: Cargo.toml
crates/slate-html/src/: html5_parser.rs  lib.rs  parser.rs  tree.rs
crates/slate-image/: Cargo.toml
crates/slate-image/src/: advanced_decoder.rs  cache.rs  decoder.rs  lib.rs  loader.rs
crates/slate-kernel/: Cargo.toml
crates/slate-kernel/benches/: dispatch.rs
crates/slate-kernel/src/: lib.rs  parse.rs
crates/slate-layout/: Cargo.toml
crates/slate-layout/benches/: flexbox.rs
crates/slate-layout/src/: block.rs  flexbox.rs  grid.rs  inline.rs  lib.rs
crates/slate-network/: Cargo.toml
crates/slate-network/src/: fetch.rs  lib.rs  parse.rs  sandbox.rs
crates/slate-rasterizer/: Cargo.toml
crates/slate-rasterizer/src/: display_list.rs  lib.rs  painter.rs
crates/slate-render/: Cargo.toml
crates/slate-render/src/: frame.rs  lib.rs
crates/slate-render/src/shaders/: rect.wgsl
crates/slate-script/: Cargo.toml
crates/slate-script/src/: bindings.rs  bridge.rs  event_loop.rs  host.rs  lib.rs  runtime.rs
crates/slate-state/: Cargo.toml
crates/slate-state/src/: lib.rs
crates/slate-storage/: Cargo.toml
crates/slate-storage/src/: events.rs  indexed_db.rs  lib.rs  local.rs  quota.rs  session.rs
crates/slate-text/: Cargo.toml
crates/slate-text/src/: font.rs  glyph.rs  harfbuzz.rs  harfbuzz_extended.rs  layout.rs  lib.rs  rasterizer.rs  shaper.rs
crates/slate-wasm/: Cargo.toml
crates/slate-wasm/src/: exports.rs  imports.rs  instance.rs  lib.rs  memory.rs  module.rs  table.rs
crates/slate-webapi/: ARCHITECTURE.md  Cargo.toml  README.md
crates/slate-webapi/examples/: translator_demo.rs
crates/slate-webapi/src/: bindings.rs  canvas.rs  console.rs  crypto.rs  dom.rs  events.rs  fetch.rs  forms.rs  geolocation.rs  lib.rs  notification.rs  performance.rs  runtime.rs  storage.rs  svg.rs  timers.rs  translator.rs  url.rs  websocket.rs
crates/slate-webapi/tests/: integration_test.rs
crates/slate-webgl/: Cargo.toml
crates/slate-webgl/src/: buffer.rs  context.rs  extensions.rs  framebuffer.rs  lib.rs  program.rs  shader.rs  state.rs  texture.rs
crates/slate-websocket/: Cargo.toml
crates/slate-websocket/src/: connection.rs  events.rs  lib.rs  message.rs  reconnect.rs
crates/slate-window/: Cargo.toml
crates/slate-workers/: Cargo.toml
crates/slate-workers/src/: dedicated.rs  lib.rs  message.rs  pool.rs  service.rs  shared.rs
docs/: docs.js  index.html
examples/: modern-web-page.html
scripts/: benchmark.sh  browser_engine_benchmark.py  compare_benchmarks.sh  performance_report.sh
slate-website/slate-website/: package-lock.json  package.json  tsconfig.tsbuildinfo
slate-website/slate-website/app/: globals.css  layout.tsx  page.tsx
slate-website/slate-website/app/about/: page.tsx
slate-website/slate-website/app/api/repository/: route.ts
slate-website/slate-website/app/architecture/: page.tsx
slate-website/slate-website/app/benchmarks/: page.tsx
slate-website/slate-website/app/docs/: page.tsx
slate-website/slate-website/components/: architecture-section.tsx  benchmark-section.tsx  hero-section.tsx  manifesto-section.tsx  repository-explorer.tsx  site-footer.tsx  site-nav.tsx
slate-website/slate-website/components/ui/: button.tsx  carousel.tsx
slate-website/slate-website/lib/: repository-explorer.ts
