[workspace]
resolver = "2"
members = [
    "crates/slate-ais",
    "crates/slate-dispatcher",
    "crates/slate-state",
    "crates/slate-arena",
    "crates/slate-kernel",
    "crates/slate-render",
    "crates/slate-script",
    "crates/slate-network",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.75"
license      = "Apache-2.0 OR MIT"
authors      = ["Slate Engine Contributors"]
repository   = "https://example.invalid/centrion/slate-engine"

[workspace.dependencies]
slate-ais        = { path = "crates/slate-ais" }
slate-dispatcher = { path = "crates/slate-dispatcher" }
slate-state      = { path = "crates/slate-state" }
slate-arena      = { path = "crates/slate-arena" }
slate-render     = { path = "crates/slate-render" }
slate-script     = { path = "crates/slate-script" }
slate-network    = { path = "crates/slate-network" }

slotmap          = "1.0"
dashmap          = "6.1"
bumpalo          = "3.16"
smallvec         = "1.13"
thiserror        = "2.0"
crossbeam-channel = "0.5"
flume            = { version = "0.11", default-features = false }
criterion        = { version = "0.5", features = ["html_reports"] }

# ---------------------------------------------------------------------------
# Profiles — tuned for raw execution speed, not convenience.
# ---------------------------------------------------------------------------

# Maximum throughput. Single codegen unit + fat LTO lets the linker inline
# across every crate boundary, which is critical for the Dispatcher bridge.
[profile.release]
opt-level        = 3
lto              = "fat"
codegen-units    = 1
panic            = "abort"
strip            = true
debug            = false
overflow-checks  = false

# Benchmarks need symbols for flamegraphs but still want hot code.
[profile.bench]
opt-level     = 3
lto           = "thin"
codegen-units = 1
debug         = true

# Fast iteration in dev: no optimization on our own code, light optimization
# on third-party deps so proc-macros and hashers don't dominate build time.
[profile.dev]
opt-level = 0
debug     = true

[profile.dev.package."*"]
opt-level = 1
