[package]
name        = "slate-arena"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true
authors.workspace    = true
description = "Per-page bumpalo arena. O(1) reset. No GC."

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[dependencies]
bumpalo = { workspace = true }
