[package]
name = "slate-benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bench]]
name = "full_pipeline"
harness = false

[dependencies]
slate-kernel = { path = "../slate-kernel" }
slate-dispatcher = { path = "../slate-dispatcher" }
slate-ais = { path = "../slate-ais" }

[dev-dependencies]
criterion = { workspace = true }
