[package]
name        = "slate-dispatcher"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true
authors.workspace    = true
description = "Slate Dispatcher — the high-speed bridge from dirty Web calls to AIS."

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[dependencies]
slate-ais = { workspace = true }
smallvec  = { workspace = true }
thiserror = { workspace = true }
