[package]
name    = "slate-dom"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
slate-ais = { workspace = true }
slate-arena = { workspace = true }
thiserror = { workspace = true }
slotmap = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
