[package]
name    = "slate-events"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
slate-ais = { workspace = true }
thiserror = { workspace = true }
smallvec  = { workspace = true }
crossbeam-channel = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
