[package]
name    = "slate-html"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
slate-ais = { workspace = true }
slate-dispatcher = { workspace = true }
thiserror = { workspace = true }
smallvec  = { workspace = true }

# HTML parsing
html5ever = "0.27"
markup5ever = "0.12"
markup5ever_rcdom = "0.3"
tendril = "0.4"

[dev-dependencies]
criterion = { workspace = true }
