[package]
name    = "slate-image"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
slate-ais = { workspace = true }
thiserror = { workspace = true }

# Image decoding
image = "0.25"
webp = "0.3"

[dev-dependencies]
criterion = { workspace = true }
