[package]
name    = "slate-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
slate-ais = { workspace = true }
slate-css = { workspace = true }
thiserror = { workspace = true }
smallvec  = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "flexbox"
harness = false
