[package]
name        = "slate-render"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true
authors.workspace    = true
description = "Slate render — wgpu-based AIS → GPU command buffer."

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
pollster = "0.4.0"
slate-ais = { workspace = true }
wgpu = "24.0.5"
