[package]
name        = "slate-state"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true
authors.workspace    = true
description = "Slate deterministic state store — slotmap + dashmap + snapshots."

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[dependencies]
slate-ais = { workspace = true }
slotmap   = { workspace = true }
dashmap   = { workspace = true }
