[package]
name = "slate-storage"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Slate Contributors"]
description = "Storage APIs (localStorage, IndexedDB) for Slate Engine"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
parking_lot = "0.12"
dashmap = "5.5"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
sled = "0.34"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
