[package]
name = "slate-wasm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Slate Contributors"]
description = "WebAssembly runtime for Slate Engine"

[dependencies]
slate-ais = { path = "../slate-ais" }
wasmtime = "17.0"
wasmtime-wasi = "17.0"
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
dashmap = "5.5"
bytes = "1.5"

[dev-dependencies]
criterion = "0.5"
wat = "1.0"
