[package]
name = "slate-webgl"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Slate Contributors"]
description = "WebGL implementation for Slate Engine"

[dependencies]
slate-ais = { path = "../slate-ais" }
wgpu = "0.19"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.25"
thiserror = "1.0"
parking_lot = "0.12"
dashmap = "5.5"

[dev-dependencies]
criterion = "0.5"
