[package]
name = "slate-websocket"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Slate Contributors"]
description = "WebSocket implementation for Slate Engine"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"
thiserror = "1.0"
parking_lot = "0.12"
dashmap = "5.5"
bytes = "1.5"

[dev-dependencies]
criterion = "0.5"
