[package]
name = "slate-workers"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Slate Contributors"]
description = "Web Workers implementation for Slate Engine"

[dependencies]
slate-ais = { path = "../slate-ais" }
boa_engine = "0.19"
boa_gc = "0.19"
tokio = { version = "1.35", features = ["full"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
dashmap = "5.5"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"
